--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
+ 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+
 
 <style>
   img {
@@ -16,22 +10,38 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 65%;
     margin-top:5%;
     
   }
 
-  .center {
-
+  body {
+	background-color:gray;
   }
+  
+  #circle {
+    background: lightblue;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.avatar {
+    display: block;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: #DDD;
+    border: 5px solid #cfd8dc;
+}
+
 </style>
 
 <body>
-  <img src="https://media-exp1.licdn.com/dms/image/C5603AQFPn53FWvJKPA/profile-displayphoto-shrink_800_800/0/1580773335750?e=1646870400&v=beta&t=GqW_zy4oWVfJa4CF4RlnHdc3leoCm3fSZ51HQziQ7NU" alt="Avatar"  class="center">
+  <img src="https://media-exp1.licdn.com/dms/image/C5603AQFPn53FWvJKPA/profile-displayphoto-shrink_800_800/0/1580773335750?e=1646870400&v=beta&t=GqW_zy4oWVfJa4CF4RlnHdc3leoCm3fSZ51HQziQ7NU" alt="Avatar"  class="center avatar">
 
 	<div style="text-align:center;margin-top:5%;">
-		<h1>Joe Neils</h1>
-        <h5>Oregon State University | Engineering Intern</h5>
+		<h1 style="font-family: Garamond, serif;">Joe Neils</h1>
+        <h4 style="font-family: Helvetica, sans-serif;">Oregon State University | Engineering Intern</h5>
         <br>
         <p>Contact: 503.555.5555<br>LinkedIn: <a href="https://www.linkedin.com/in/joeneils/">https://www.linkedin.com/in/joeneils/</a>
 	</div>
