--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
  
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+	<title>Joe Neils, Engineering Intern | Contact Info</title>
+</head>
 
 <style>
   img {
@@ -16,7 +18,7 @@
   }
 
   body {
-	background-color:gray;
+	background-color:#d4d4d4;
   }
   
   #circle {
@@ -30,8 +32,8 @@
     display: block;
     border-radius: 50%;
     box-sizing: border-box;
-    background-color: #DDD;
-    border: 5px solid #cfd8dc;
+    background-color: #235dba;
+    border: 5px solid #2397ba;
 }
 
 </style>
