--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<h1 style="font-family: Garamond, serif;">Joe Neils</h1>
         <h4 style="font-family: Helvetica, sans-serif;">Oregon State University | Engineering Intern</h5>
         <br>
-        <p>Contact: 503.555.5555<br>LinkedIn: <a href="https://www.linkedin.com/in/joeneils/">https://www.linkedin.com/in/joeneils/</a>
+        <p style="font-family: Helvetica, sans-serif;">Contact: 503.560.0691<br>LinkedIn: <a href="https://www.linkedin.com/in/joeneils/">https://www.linkedin.com/in/joeneils/</a>
 	</div>
 
 </body>
