--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <style>
   img {
-    border-radius: 50%;
+    border-radius: 0%;
     align: center;
     display: block;
     margin-left: auto;
@@ -41,11 +41,11 @@
 <body>
   <img src="https://media-exp1.licdn.com/dms/image/C5603AQFPn53FWvJKPA/profile-displayphoto-shrink_800_800/0/1580773335750?e=1646870400&v=beta&t=GqW_zy4oWVfJa4CF4RlnHdc3leoCm3fSZ51HQziQ7NU" alt="Avatar"  class="center avatar">
 
-	<div style="text-align:center;margin-top:5%;">
-		<h1 style="font-family: Garamond, serif;">Joe Neils</h1>
-        <h4 style="font-family: Helvetica, sans-serif;">Oregon State University | Engineering Intern</h5>
-        <br>
-        <p style="font-family: Helvetica, sans-serif;">Contact: 503.560.0691<br>LinkedIn: <a href="https://www.linkedin.com/in/joeneils/">https://www.linkedin.com/in/joeneils/</a>
+	<div style="text-align:center;margin-top:0%;">
+		<p style="font-family: Garamond, serif;font-size:8em;margin-top:5%;margin-bottom:0%;">Joe Neils</p>
+        <p style="font-family: Helvetica, sans-serif;">Oregon State University | Engineering Intern</p>
+        
+        <p style="font-family: Helvetica, sans-serif;">Contact: 503.560.0691<br>LinkedIn: <a href="https://www.linkedin.com/in/joeneils/">https://www.linkedin.com/in/joeneils/</a></p>
 	</div>
 
 </body>
